test/parser/negative/Choice.java
public class Choice {
    public Choice() {}
  public int m(int x) {
    return x==42 ? 87 : x; 
  }
}
